--- a/app/src/main/res/layout/activity_exercise_list.xml
+++ b/app/src/main/res/layout/activity_exercise_list.xml
@@ -2,17 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    tools:context=".ExerciseListActivity">
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/list_exercises"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SessionListActivity"
-        android:paddingRight="8dp"
-        android:paddingLeft="8dp">
-    </ListView>
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"></ListView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_session"
@@ -24,6 +23,7 @@
         android:layout_marginEnd="32dp"
         android:clickable="true"
         app:backgroundTint="@android:color/background_light"
-        app:elevation="0dp"
-        app:srcCompat="@drawable/plus_circle" />
+        app:elevation="4dp"
+        app:srcCompat="@drawable/plus_circle"
+        android:onClick="newExercise"/>
 </RelativeLayout>
