--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,17 +7,34 @@
     tools:context=".MenuActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/exercises_list_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="350dp"
+        android:layout_marginBottom="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="listSessions"
-        android:text="@string/list_button_string"
+        android:layout_marginTop="16dp"
+        android:onClick="listExercises"
+        android:text="@string/list_button_exercises_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/session_list_button" />
+
+    <Button
+        android:id="@+id/session_list_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:onClick="listSessions"
+        android:text="@string/list_button_string"
+        app:layout_constraintBottom_toTopOf="@+id/exercises_list_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 </android.support.constraint.ConstraintLayout>
