--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -8,13 +8,11 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Title" />
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Description" />
+        android:layout_weight="1" />
 </LinearLayout>
