Implemented new SessionCreation and a lot of functionality for it. Still not working correctly because of seralization.

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -25,5 +25,6 @@
         android:clickable="true"
         app:backgroundTint="@android:color/background_light"
         app:elevation="0dp"
-        app:srcCompat="@drawable/plus_circle" />
+        app:srcCompat="@drawable/plus_circle"
+        android:onClick="createSession"/>
 </RelativeLayout>
